<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_formulario"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rbCursoTecnico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Curso Técnico" />
        <RadioButton
            android:id="@+id/rbGraduacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Graduação" />

        <RadioButton
            android:id="@+id/rbPosGraduacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pós-graduação" />

    </RadioGroup>

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviar" />
</LinearLayout>
